# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Record bzr branch and revision in the binary.

  17 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Set last component of emacs-version to ${PR}+1.

  13 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Remove RESTRICT=strip. I never understood why this would be needed; so let's
  see if someone will complain.

  02 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Sync from Portage tree.

  15 Jul 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r1.ebuild,
  metadata.xml:
  Sync from Portage tree.

  19 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild, -emacs-vcs-24.0.9999-r2.ebuild:
  Sync from portage tree. Remove experimental ebuild linking to Xaw3dxft.

  11 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild:
  Sync from portage tree.

*emacs-vcs-24.0.9999-r2 (04 Mar 2011)

  04 Mar 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r2.ebuild:
  Try linking against Xaw3dxft for utf-8 font support in Xaw3d widgets.

*emacs-vcs-23.3.9999 (01 Mar 2011)

  01 Mar 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-vcs-23.2.9999-r1.ebuild,
  +emacs-vcs-23.3.9999.ebuild, emacs-vcs-24.0.9999-r1.ebuild, metadata.xml:
  Bump emacs-23 live ebuild to reflect upstream change of version number.
  The sound USE flag is global now.

  19 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Revert change of 09 Feb 2011. Add "nosmart" initial URI.

  09 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,