@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 EBUILD emacs-vcs-23.3.9999.ebuild 10762 RMD160 9e1931ad23a2dfe42aea96004b0e7a8e711ae2aa SHA1 21a7f8d8b5cdac26d6d20f18c90bd9092aa4c88e SHA256 3569b21dea85e1c30c735584221d9bb6cf18d9ce99c25d1bb37ad2284b961253
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 11277 RMD160 c5c3e9b58e12570a2c4cd926d5be01506ecf4332 SHA1 ac32fe1dfd0a108d3ac29526166b43b67dd585de SHA256 a0e5fc7c7fca70d4ac3c919245f226396f55198f0c27588c43106887b3e7c930
-MISC ChangeLog 3829 RMD160 a0948efa17ba6a8871b5a4b2bba21c06cfe94370 SHA1 21259165dfa974fe4da060e7ee5c1c53e85192fb SHA256 e96be170eb88b814e1721522c9092718f5c0a97fbbf9e20aaec1b73b791384d0
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 11097 RMD160 d2ccbed862e692036722e4db5e9f1f88184cb737 SHA1 122a86de70bdb96a27185fd27504c19a734093f1 SHA256 ef9cb40c3874266264542cd090794769cd1cf1f6e852e29b3f7cc483806d14e4
+MISC ChangeLog 3891 RMD160 5af693798fe6e857bea9555b708e973a4ad550cb SHA1 1f119bce3470067e372c6c044aea50470930c1d2 SHA256 6dc2c6696990ff36a636b72ed9650e630158e36c6d85092aa98d5753901d375b
 MISC metadata.xml 2106 RMD160 be033c20ddf8d50f045e59552c1cccd3ce829149 SHA1 7e92f2fc679fade0f4b3a4c3d587a6ec8757437d SHA256 ae9bc43d98770006a0792f92b173911e1357135f82f33156f121206f51948e65
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk5OlEEACgkQOeoy/oIi7uyDrACg2+I3ISehYUfLssZhrXCFsH/n
+hhgAn2JIvWdxPH3fp9rHWU38fV1TjOAu
+=vSwv
+-----END PGP SIGNATURE-----
