@@ -5,6 +5,7 @@
   19 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
   emacs-vcs-24.0.9999-r1.ebuild:
   Record bzr branch and revision in the binary.
+  USE flags gconf and gsettings no longer exclude each other.
 
   17 Aug 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
   emacs-vcs-24.0.9999-r1.ebuild:
